--- a/webapps/src/index.html
+++ b/webapps/src/index.html
@@ -3,6 +3,11 @@
     <head>
         <meta charset="utf-8" />
         <title>Solve me</title>
+        <style>
+            body {
+                background-color: #f09099;
+            }
+        </style>
     </head>
     <body>
         <div class="root">Loading...</div>
