--- a/webapps/nojs/page2.html
+++ b/webapps/nojs/page2.html
@@ -1,1 +1,13 @@
 <!DOCTYPE html>
+<html>
+    <head>
+        <style>
+            body {
+                background-color: #f0f099;
+            }
+        </style>
+    </head>
+    <body>
+        No JS page.
+    </body>
+</html>
